--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .show-result .custom-hover:hover {
-    box-shadow: 1px 1px 30px 1px black;
+    box-shadow: 1px 1px 30px 1px grey;
     transition: 0.7s;
     cursor: pointer;
 }
