--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,47 @@
 .show-result .custom-hover:hover {
-    box-shadow: 1px 1px 30px 1px grey;
-    transition: 0.7s;
-    cursor: pointer;
+  box-shadow: 1px 1px 30px 1px grey;
+  transition: 0.7s;
+  cursor: pointer;
+}
+
+/* show details */
+
+.showDetails {
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
+}
+
+.show-part {
+  width: 70%;
+  height: 70vh;
+  background-color: white;
+  padding: 20px;
+  border-radius: 20px;
+  position: relative;
+}
+.show-part img {
+  height: 60vh;
+}
+.show-part span {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background-color: red;
+  padding: 0 10px;
+  border-radius: 50%;
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+}
+.custom-table {
+  height: 65vh;
+  overflow: auto;
 }
