--- a/css/style.css
+++ b/css/style.css
@@ -21,15 +21,14 @@
 
 .show-part {
   width: 70%;
-  height: 70vh;
+  max-width: 1200px;
+  max-height: 600px;
   background-color: white;
   padding: 20px;
   border-radius: 20px;
   position: relative;
 }
-.show-part img {
-  height: 60vh;
-}
+
 .show-part span {
   position: absolute;
   top: -10px;
@@ -42,6 +41,7 @@
   cursor: pointer;
 }
 .custom-table {
-  height: 65vh;
-  overflow: auto;
+  height: 69vh;
+
+  overflow-x: hidden;
 }
